# GLDiagram

./: .clang-tidy  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  C_PROJECT_STANDARD.md  LICENSE.txt  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  infrastructure.md
.github/workflows/: build.yml  ci.yml  static-analysis.yml
cmake/: CompilerOptions.cmake  Dependencies.cmake  Packaging.cmake  Sources.cmake  Tests.cmake  gldiagram_version.h.in
doc/: README-zh.md  README.md  agent-playbooks.md  ai-agents.md  build.md  cmake-guide.md  release.md  template.md  testing.md
doc/adr/: README.md
doc/guides/: ai-agent.md  environment.md
glad/: glad.c
include/glad/: glad.h
include/nuklear/: nuklear_glfw_gl3.h
libs/: glfw3.lib
scripts/: check.ps1  check.sh
src/: main.c  main.cpp
src/gldiagram/: nuklear_backend.c
tests/: test_version.c
